2014-09-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/reclas.R (reclas): recursive location and scale ("recursive	median")
	from Rolf Turner

2013-03-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/covNNC.Rd:
	* R/covNNC.R: add, as historical reference, from former CRAN
	package covRobust.  The 'cov.nnve()" is called 'covNNC()' now.

2009-12-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/BACON-alg.R (GiveTis): remove multi-argument return() legacy

2009-11-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/mvBACON.Rd: typo in \link{}

2009-06-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/rbwheel-fun.R (rbwheel): scaleAfter = TRUE becomes default, as
	this is what was always intended.

2009-06-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-0, CRAN-released 2009-06-14

	* demo/rbwheel_ics.R: start adding ICS demos (using lattice in order
	to *combine* scatter plot matrices.

	* R/rbwheel-fun.R (rbwheel): add 'spherize' and 'scaleAfter'
	options, defaulting to FALSE.
	* man/rbwheel.Rd: dito

2009-05-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/L1medians.R (L1median): newly added, subsuming my code
	collection from December 2005.

	* NAMESPACE: added


2009-05-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-1

	* R/BACON-alg.R (mvBACON, BACON): newly added

2008-12-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-0, on R-forge *and* available
	from http://stat.ethz.ch/research/areas/robustness

	* R/rbwheel-fun.R: documented, tested ...

2008-11-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/rbwheel-fun.R: use my Qrot() [from Dec 2005] to generalize
	Werner's construction; create a function, add arguments; more
	tests lead to the 'scale = TRUE' enhancement.

2008-11-27  Werner Stahel  <stahel@stat.math.ethz.ch>

	* sends an R script implementing the barrowwheel idea in 3D